deploy/kubernetes/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: key-submission
  namespace: covidshield
  labels:
    app.kubernetes.io/name: key-submission
    app.kubernetes.io/part-of: covidshield
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: key-submission
      app.kubernetes.io/part-of: covidshield
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: key-submission
        app.kubernetes.io/part-of: covidshield
    spec:
      automountServiceAccountToken: false
      containers:
      - name: key-submission
        image: covidshield/key-submission:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: key-retrieval
  namespace: covidshield
  labels:
    app.kubernetes.io/name: key-retrieval
    app.kubernetes.io/part-of: covidshield
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: key-retrieval
      app.kubernetes.io/part-of: covidshield
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: key-retrieval
        app.kubernetes.io/part-of: covidshield
    spec:
      automountServiceAccountToken: false
      containers:
      - name: key-submission
        image: covidshield/key-retrieval:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
