deploy/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: covidshield
  labels:
    app.kubernetes.io/name: covidshield
    app.kubernetes.io/part-of: covidshield

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: covidshield
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
